fixing package name to avoid conflicts with official package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "nord",
+    "name": "nord-port",
     "title": "Nord",
     "description": "An arctic, north-bluish color palette",
     "author": {
